[gd_scene load_steps=4 format=2]

[ext_resource path="res://tempo/tempo.gd" type="Script" id=1]
[ext_resource path="res://tempo/metronome_01.ogg" type="AudioStream" id=2]
[ext_resource path="res://tempo/metronome_02.ogg" type="AudioStream" id=3]

[node name="tempo" type="Node"]
script = ExtResource( 1 )
all_beats_sound = false
measure_sound = true
quart_sound = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Clic_01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Clic_02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
toggle_mode = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="toggled" from="PlayButton" to="." method="_on_PlayButton_toggled"]
